--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </header>
 <body>
     <div id="container">
-        <form id="form1" action="form_action.asp">
+        <form id="form1">
             Välj en siffra max 100<br><br> <br> Antal <br>
             <Section class="slidecontainer"> <!-- Slidebar för antal-->
                     <input type="range" class="slider" name="loopValue" id="antal" value="50" min="1" max="100" 
