--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <form id="form1">
             Välj en siffra max 100<br><br> <br> Antal <br>
             <Section class="slidecontainer"> <!-- Slidebar för antal-->
-                    <input type="range" class="slider" name="loopValue" id="antal" value="50" min="1" max="100" 
+                    <input type="range" class="slider" name="loopvärde" id="antal" value="50" min="1" max="100" 
                         oninput="document.getElementById('antalBB').innerHTML = this.value" />
                     <label id="antalBB"></label>
                     <br>
                     <br>
                     <br> Bisch valet<br> <!-- Slidebar för bisch-->
-                    <input type="range" class="slider" name="division1" id="brange" value="5" min="1" max="100" 
+                    <input type="range" class="slider" name="bish1" id="brange" value="5" min="1" max="100" 
                         oninput="document.getElementById('bischrange').innerHTML = this.value" />
                     <label id="bischrange"></label>
                     <br>
                     <br>
                     <br> Bosch valet<br> <!-- Slidebar för bosch-->
-                    <input type="range" class="slider" name="division2" id="borange" value="7" min="1" max="100" 
+                    <input type="range" class="slider" name="bosh2" id="borange" value="7" min="1" max="100" 
                         oninput="document.getElementById('boschrange').innerHTML = this.value" />
                     <label id="boschrange"></label>
                     <br>
